--- a/AndroidApplication/app/src/main/res/layout/activity_webview.xml
+++ b/AndroidApplication/app/src/main/res/layout/activity_webview.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+      Created by Dailin Luo
+      Unless specified as personal contribution, this class is adapted from website:
+      https://www.tutorialspoint.com/android/android_webview_layout.htm
+ -->
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.buckybarnes.androidapplication.webview">
+    tools:context=".webview">
 
     <WebView
         android:layout_width="wrap_content"
